Mon Dec 31 15:10:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* vm_backtrace.c: Add documentation for Kernel#caller_locations,
	  Kernel#caller, and Thread::Backtrace::Location

Mon Dec 31 13:05:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* test/ruby/test_backtrace.rb: Add test for r37957 [Feature #7434]

Sun Dec 30 23:33:36 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (simple_re_meta): escaped closing parenthesis has different
	  meaning.  [Bug #7610] [ruby-core:51088]

Sun Dec 30 12:09:47 2012  Charlie Somerville  <charlie@charliesomerville.com>

	* configure.in: use 4 argument form of AC_CHECK_HEADERS to force
	  autoconf to use compiler's result

Sun Dec 30 10:58:04 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* test/ruby/test_keyword.rb: add a test for passing hash
	  as a last argument. [ruby-dev:46712] [Bug #7529]

Sun Dec 30 10:51:29 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c: set keyword hash on Proc/block calls.
	  [ruby-core:51172] [Bug #7630]

	* test/ruby/test_keyword.rb: add tests for above.

Sat Dec 29 21:57:11 2012  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/completion.rb: treat rightly completion for symbol on irb
	  [Bug #7632].

Sat Dec 29 21:51:30 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/curses/curses.c (window_cury, window_curx, window_maxy,
	  window_maxx, window_begy, window_begx): use RB_UNUSED_VAR()
	  to suppress unused-but-set-variable warnings.

Sat Dec 29 16:45:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* iseq.c (RubyVM::InstructionSequence): rdoc formatting

Sat Dec 29 15:28:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* iseq.c (RubyVM::InstructionSequence):	Add rdoc for new iseq features
	  added from r38085, this includes ::of, #path, #absolute_path,
	  #label, #base_label, #first_lineno, and #inspect

Sat Dec 29 14:06:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* iseq.c (rb_iseq_line_trace_all, rb_iseq_line_trace_specify): Add